# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "autocxx-mt"
version = "0.26.0"
authors = ["Rose Hsu <rosehsu47@gmail.com>"]
edition = "2021"

[dependencies]
cxx = "1.0.78"
autocxx = "0.26.0" 

[build-dependencies]
autocxx-build = "0.26.0"
miette = { version = "5", features = ["fancy"] }
